--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chai": "^4.1.2",
     "husky": "^0.14.3",
     "mocha": "^3.5.3",
+    "sinon": "^4.0.0",
+    "sinon-chai": "^2.14.0",
     "standard": "^10.0.3"
   },
   "standard": {
